# g6-web

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
examples/: CMakeLists.txt
examples/chat/: CMakeLists.txt  bot.cpp  client.py  index.html  login.html  main.cpp  main.js
examples/file_server/: CMakeLists.txt  main.cpp
include/g6/crypto/: base64.hpp  sha1.hpp
include/g6/http/: client.hpp  http.hpp  message.hpp  parser.hpp  router.hpp  server.hpp  session.hpp
include/g6/http/impl/: static_parser_handler.hpp
include/g6/json/: json.hpp  serialize.hpp
include/g6/web/: context.hpp  proto.hpp  uri.hpp  web_cpo.hpp
include/g6/web/impl/: context.hpp
include/g6/ws/: client.hpp  connection.hpp  error.hpp  header.hpp  server.hpp
src/: http_parser.cpp  json.cpp  static_parser_handler.cpp  uri.cpp
tests/: CMakeLists.txt
tests/http/: CMakeLists.txt  http-parser-test.cpp  http-server-test.cpp  server-test.cpp
tests/https/: CMakeLists.txt  https-server-test.cpp
tests/json/: CMakeLists.txt  json-benchmarks.cpp  json-serialize.cpp  json-test.cpp
tests/tmpl/: CMakeLists.txt  tmpl-test.cpp
tests/web/: CMakeLists.txt  uri-test.cpp
tests/ws/: CMakeLists.txt  client.py  ping-pong-client.cpp  ping-pong-client.py  ping-pong-server.cpp  ping-pong-server.py  ws-server-test.cpp
